fixing same white space on phone view

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@
   border-width: .1rem;
   padding: .5rem;
   font-size: X-large;
-  min-width: 23rem;
+  min-width: 17rem;
   max-width: 25rem;
   border-radius: .5rem;
   background-color: rgb(255, 255, 255);}
